Now able to move blocks around

--- a/index.html
+++ b/index.html
@@ -1,7 +1,43 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+  <title>2048 - a clone of a clone of a clone of a...</title>
 </head>
+
 <body>
+  <h1 class="title">2048</h1>
+  <div id="tile-container">
+    <!-- <div class="tile">
+    </div> -->
+  </div>
+  <div class="grid-row">
+    <div class="grid-cell" id="originCell"></div>
+    <div class="grid-cell"></div>
+    <div class="grid-cell"></div>
+    <div class="grid-cell"></div>
+  </div>
+  <div class="grid-row">
+    <div class="grid-cell"></div>
+    <div class="grid-cell"></div>
+    <div class="grid-cell"></div>
+    <div class="grid-cell"></div>
+  </div>
+  <div class="grid-row">
+    <div class="grid-cell"></div>
+    <div class="grid-cell"></div>
+    <div class="grid-cell"></div>
+    <div class="grid-cell"></div>
+  </div>
+  <div class="grid-row">
+    <div class="grid-cell"></div>
+    <div class="grid-cell"></div>
+    <div class="grid-cell"></div>
+    <div class="grid-cell"></div>
+  </div>
 </body>
+
+<link rel="stylesheet" href="main.css">
+<script src="application.js"></script>
+
 </html>
